
## New Features

## Fixes
- `gui/design`: fix clicking the center point when there is a mark behind it entering both mark dragging and center dragging at the same time. Now you can click once to move the shape, and click twice to move only the mark behind the center point.

## Misc Improvements
- `exportlegends`: increase precision of progress bar and stabilize formatting of the text

## Removed

# 50.11-r6

## Fixes
- `makeown`: fix error when adopting units that need a historical figure to be created
- `item`: fix missing item categories when using ``--by-type``

# 50.11-r5

## New Tools
- `control-panel`: new commandline interface for control panel functions
- `uniform-unstick`: (reinstated) force squad members to drop items that they picked up in the wrong order so they can get everything equipped properly
- `gui/reveal`: temporarily unhide terrain and then automatically hide it again when you're ready to unpause
- `gui/teleport`: mouse-driven interface for selecting and teleporting units
- `gui/biomes`: visualize and inspect biome regions on the map
- `gui/embark-anywhere`: bypass those pesky warnings and embark anywhere you want to
- `item`: perform bulk operations on groups of items.

## New Features
- `uniform-unstick`: add overlay to the squad equipment screen to show a equipment conflict report and give you a one-click button to (attempt to) fix
- `gui/settings-manager`: save and load embark difficulty settings and standing orders; options for auto-load on new embark

## Fixes
- `source`: water and magma sources and sinks now persist with fort across saves and loads
- `gui/design`: fix incorrect dimensions being shown when you're placing a stockpile, but a start coordinate hasn't been selected yet
- `warn-stranded`: don't warn for citizens who are only transiently stranded, like those on stepladders gathering plants or digging themselves out of a hole
- `ban-cooking`: fix banning creature alcohols resulting in error